--- a/sofaro/templates/base.html
+++ b/sofaro/templates/base.html
@@ -16,7 +16,7 @@
       }
       p{
          font-size:20px;
-         color:Bisque;
+         color:SteelBlue;
       }
       .btn {
         text-decoration: none;
