--- a/sofaro/templates/index.html
+++ b/sofaro/templates/index.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="container">
-  <h1>Hotels</h1>
+  <h1>
+    <img src="media/391fd53d-842a-4e15-a0a3-56486b518c61-benzin-preview.png" width="60">
+    SOFARO HOTELS
+  </h1>
   <div class="row mb-5">
   {% for product in products %}
     {% if forloop.counter0|divisibleby:3 %}
