--- a/sofaro/templates/product.html
+++ b/sofaro/templates/product.html
@@ -8,7 +8,8 @@
  {% endif %}
  <div class="card-body">
    <h5 class="card-title">{{ product.title }}</h5>
-   <p class="card-text">Color: {{ product.color }}</p>
+   <p class="card-text">Description: {{ product.description }}</p>
+   <p class="card-text">Country: {{ product.country }}</p>
    <p class="card-text">Price: {{ product.price }} BYN</p>
    <p class="card-text">Price: {{ product.price_usd }} USD</p>
  </div>
