--- a/sofaro/templates/base.html
+++ b/sofaro/templates/base.html
@@ -6,7 +6,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
-    <style type="text/css">
+
+   
+
+     <style type="text/css">
       body {
           background-color:LightSkyBlue;
       }
@@ -80,12 +83,13 @@
         filter: grayscale(100%);
       }
       </style>
-     
+
+
   {% block styles %}{% endblock %}
 </head>
 <body>
+  {% include "search.html" %}
   {% block content %}{% endblock %}
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
   integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
   crossorigin="anonymous"></script>
