--- a/sofaro/templates/product.html
+++ b/sofaro/templates/product.html
@@ -7,10 +7,16 @@
    <img src="{% static 'img/no-image.png' %}" class="card-img-top" alt="{{ product.title }}">
  {% endif %}
  <div class="card-body">
-   <h5 class="card-title">{{ product.title }}</h5>
+   <h5 class="card-title"><a href="{% url "onehotel" product.id %}">{{ product.title }}</a></h5>
+   {% comment %} <h5 class="card-title"><a href="{% url "hotels" product.country %}">{{ product.country }}</a></h5> {% endcomment %}
    <p class="card-text">Description: {{ product.description }}</p>
    <p class="card-text">Country: {{ product.country }}</p>
    <p class="card-text">Price: {{ product.price }} BYN</p>
    <p class="card-text">Price: {{ product.price_usd }} USD</p>
+   <p>
+    <img src="5d8e8421532dade28c8204a1f0a60b01.jpg.webp" alt="" class="scale">
+    <img src="dubaj-informatsiya-dlya-turistov.jpg" alt="" class="scale">
+    <img src="newsbel.by-20.01.2022-hrxmbf0uj8pjnmqw8zueywkclj4shhus.jpg" alt="" class="scale">
+   </p>
  </div>
 </div>
