--- a/sofaro/templates/base.html
+++ b/sofaro/templates/base.html
@@ -6,9 +6,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
-
-   
-
      <style type="text/css">
       body {
           background-color:LightSkyBlue;
@@ -88,7 +85,9 @@
   {% block styles %}{% endblock %}
 </head>
 <body>
-  
+  {% comment %} <a href="{% url "index" %}"><button type="button" class="btn btn-outline-warning">Countries</button> {% endcomment %}
+  {% comment %} <a href="{% url "register" %}"><button type="button" class="btn btn-outline-info">Register</button> {% endcomment %}
+  {% comment %} <a href="{% url "contacts" %}"><button type="button" class="btn btn-outline-light">Contacts</button> {% endcomment %}
   {% include "search.html" %}
   {% block content %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
