--- a/sofaro/templates/countries.html
+++ b/sofaro/templates/countries.html
@@ -10,14 +10,14 @@
   </h1>
   <div class="row mb-5">
   {% for country in countries %}
-    {% if forloop.counter0|divisibleby:3 %}
+    {% comment %} {% if forloop.counter0|divisibleby:3 %}
       </div><div class="row mb-3">
-    {% endif %}
+    {% endif %} {% endcomment %}
     <div class="col-3">
       {% include "country.html" %}
     </div>
   {% endfor %}
   </div>
- {% endblock %}
 </div>
+ {% endblock %}
 
