--- a/sofaro/templates/goodBook.html
+++ b/sofaro/templates/goodBook.html
@@ -4,7 +4,8 @@
 
 {% block content %}
    <div>
-    <h1>Вы успешно забронировали отель</h1>
+    <h1>Вы успешно забронировали отель</h1><br>
+   <h1> Подтверждение придет к вам на почту</h1> <br>
     <a href="{% url "index" %}"><button type="submit" class="btn btn-primary">На главную</button></a>
   </div>
   {% endblock %}
