--- a/sofaro/templates/oneHotel.html
+++ b/sofaro/templates/oneHotel.html
@@ -9,6 +9,33 @@
     SOFARO HOTELS
   </h1>
   <div class="row mb-5">
+    
+<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="165634-vodnoe_bungalo_antenna-maldivy-villa-bungalo-more-550x310.jpg" class="d-block w-100" alt="scale">
+    </div>
+    <div class="carousel-item">
+      <img src="168509-gidroresursy-zemlya-atmosfera-atmosfera_zemli-voda-550x310.jpg" class="d-block w-100" alt="scale">
+    </div>
+    <div class="carousel-item">
+      <img src="167753-more-plyazh-voda-oblako-rastenie-550x310.jpg" class="d-block w-100" alt="scale">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> 
 {% load static %}
 
 <div class="card">
