--- a/sofaro/templates/oneHotel.html
+++ b/sofaro/templates/oneHotel.html
@@ -5,46 +5,53 @@
 {% block content %}
 <div class="container">
   <h1>
-    <img src="media/391fd53d-842a-4e15-a0a3-56486b518c61-benzin-preview.png" width="70">
+    <img src="/media/391fd53d-842a-4e15-a0a3-56486b518c61-benzin-preview.png" width="70">
     SOFARO HOTELS
   </h1>
-  <div class="row mb-5">
-    
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <div class="row mb-5">  
+  <div class = "container-fluid my carousel">
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-center">
+            <img src={{ oneHotel.image.url }} alt="...">
+          </div>
+        </div>
+        {% for image in images %}
+          <div class="carousel-item justify-content-center">
+            <div class="d-flex justify-content-center">
+              <img src={{ image.image.url }} alt="...">
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="165634-vodnoe_bungalo_antenna-maldivy-villa-bungalo-more-550x310.jpg" class="d-block w-100" alt="scale">
-    </div>
-    <div class="carousel-item">
-      <img src="168509-gidroresursy-zemlya-atmosfera-atmosfera_zemli-voda-550x310.jpg" class="d-block w-100" alt="scale">
-    </div>
-    <div class="carousel-item">
-      <img src="167753-more-plyazh-voda-oblako-rastenie-550x310.jpg" class="d-block w-100" alt="scale">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div> 
-{% load static %}
 
+{% load static %}
+{% comment %} 
 <div class="card">
   
  {% if oneHotel.image %}
    <img src="{{ oneHotel.image.url }}" class="card-img-top" alt="{{ oneHotel.title }}">
  {% else %}
    <img src="{% static 'img/no-image.png' %}" class="card-img-top" alt="{{ oneHotel.title }}">
- {% endif %}
+ {% endif %} {% endcomment %}
+
 
 
 {% comment %} <div id="carouselExampleIndicators" class="carousel slide">
