--- a/sofaro/templates/leaveScore.html
+++ b/sofaro/templates/leaveScore.html
@@ -5,6 +5,6 @@
    <div>
     <h1>Вы оставили оценку</h1><br>
    <h1> Ваша оценка многое значит для нас</h1> <br>
-    <a href="{% url "index" %}"><button type="submit" class="btn btn-primary">На главную</button></a>
+    <a href="{% url "index" %}"><button type="submit" class="btn btn-primary">Main page</button></a>
   </div>
   {% endblock %}
